create nextToken()