@@ -8,17 +8,60 @@ public class IsiScanner {
 
     private char[] content;
     private int estado;
+    private int pos;
 
     public IsiScanner(String filename) {
         try {
             String txtConteudo;
-            txtConteudo = Files.readString(Paths.get(filename));
+            txtConteudo = new String(Files.readAllBytes(Paths.get(filename)), StandardCharsets.UTF_8);
             System.out.println("DEBUG ----------");
             System.out.println(txtConteudo);
             System.out.println("----------------");
             content = txtConteudo.toCharArray();
+            pos = 0;
         } catch (Exception ex) {
             ex.printStackTrace();
+        }
+    }
+
+    public Token nextToken() {
+        char currentChar;
+        String term = "";
+        if (isEOF()) {
+            return null;
+        }
+        estado = 0;
+        while (true) {
+            currentChar = nextChar();
+            switch (estado) {
+                case 0:
+                    if (isChar(currentChar)) {
+                        term += currentChar;
+                        estado = 1;
+                    } else if (isDigit(currentChar)) {
+                        estado = 3;
+                    } else if (isSpace(currentChar)) {
+                        estado = 0;
+                    } else if (isOperator(currentChar)) {
+                        estado = 5;
+                    } else {
+                        throw new RuntimeException("Unrecognized SYMBOL");
+                    }
+                    break;
+                case 1:
+                    if (isChar(currentChar) || isDigit(currentChar)) {
+                        estado = 1;
+                    } else {
+                        estado = 2;
+                    }
+                    break;
+                case 2:
+                    back();
+                    Token token = new Token();
+                    token.setType(Token.TK_IDENTIFIER);
+                    token.setText(term);
+                    return token;
+            }
         }
     }
 
@@ -36,5 +79,17 @@ public class IsiScanner {
 
     private boolean isSpace(char c) {
         return c == ' ' || c == '\t' || c == '\n' || c == '\r';
+    }
+
+    private char nextChar() {
+        return content[pos++];
+    }
+
+    private boolean isEOF() {
+        return pos == content.length;
+    }
+
+    private void back() {
+        pos--;
     }
 }
